Fix overlapping dialog box

--- a/css/style.css
+++ b/css/style.css
@@ -622,7 +622,7 @@ DIALOG BOX
 	height: 240px;
 	border: 1px solid #97CEEC;
 	border-radius: 8px 0 8px 8px;
-	margin: 80px auto 0 -240px;
+	margin: 50px auto 0 -240px;
 	z-index: 4;
 	left: 50%;
 	font-size: 1.1em;
